[package]
name = "featherpg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
bstr = "0.2.16"
thiserror = "1.0.26"

[dev-dependencies]
maplit = "1.0.2"
